2013-09-20  Antti Koivisto  <antti@apple.com>

        Make createRenderer() return RenderElement
        https://bugs.webkit.org/show_bug.cgi?id=121666

        Rubber-stamped by Andreas Kling.
        
        Tighter typing.

2013-09-20  Patrick Gansterer  <paroga@webkit.org>

        Buildfix for ENABLE(CSS_FILTERS) && !ENABLE(ACCELERATED_COMPOSITING) after r155131.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::enclosingFilterRepaintLayer):

2013-09-20  Patrick Gansterer  <paroga@webkit.org>

        [WIN] Fix build without precompiled header after r154146.

        * platform/win/WebCoreBundleWin.cpp:

2013-09-20  Antti Koivisto  <antti@apple.com>

        Add covariant RenderElement* Element::renderer()
        https://bugs.webkit.org/show_bug.cgi?id=121638

        Reviewed by Andreas Kling.

        Also add isRenderElement() test and casting functions.

2013-09-19  Anders Carlsson  <andersca@apple.com>

        Handle null font families.

        Reviewed by Darin Adler.

        * platform/graphics/Font.cpp:
        (WebCore::computeFontGlyphsCacheHash):
        Don't crash when trying to hash null strings.

2013-09-19  Darin Adler  <darin@apple.com>

        Fix a couple mistakes in my recent CSS grammar leak patch
        https://bugs.webkit.org/show_bug.cgi?id=121659

        Reviewed by Alexey Proskuryakov.

        * css/CSSGrammar.y.in: Added initialization to nullptr for some error cases
        that were otherwise leaving a bad value for the result of the production.
        Also fixed a reversed logical expression.

2013-09-19  Yoav Weiss  <yoav@yoav.ws>

        Remove URL decoding in srcset handling
        https://bugs.webkit.org/show_bug.cgi?id=121609

        Reviewed by Benjamin Poulain.

        Tests: fast/hidpi/image-srcset-question-mark.html
               fast/loader/image-src-question-mark.html

        Removed URL decoding from src and srcset's handling algorithm, since they break encoded URLS.
